fix p5 speed and component overflow

--- a/src/components/features/HeroP5/HeroP5.module.css
+++ b/src/components/features/HeroP5/HeroP5.module.css
@@ -1,25 +1,22 @@
 /* HeroP5.module.css */
 
-/* Styles for the entire HeroP5 component */
 .heroContainer {
   position: relative;
-  width: 100vw; /* Use viewport width for width */
-  height: 75vh;
+  width: 100vw; /* Full width of the viewport */
+  height: 75vh; /* 75% of the viewport's height */
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  overflow: hidden; /* Hide any content overflowing the container */
+  overflow: hidden; /* Hide any overflowing content */
 }
 
-/* Styles for the p5.js sketch iframe */
 .p5Sketch {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 80vh;
-  overflow: hidden;
+  width: 100%; /* Full width of the parent container */
+  height: 100%; /* Full height of the parent container */
   border: none;
   z-index: 10;
   opacity: 50%;
